--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ categories = ["finance"]
 rstest = "0.18.2"
 pretty_assertions = "1.*"
 clap = { version = "4.5.0", features = ["derive"] }
+pretty_env_logger = "0.5.0"
+log = "0.4.21"
